--- a/src/asciidraw/src/docs/style.css
+++ b/src/asciidraw/src/docs/style.css
@@ -1,3 +1,5 @@
+/* custom port of https://github.com/sindresorhus/github-markdown-css */
+
 .markdown-body {
     --base-size-4: 0.25rem;
     --base-size-8: 0.5rem;
@@ -659,6 +661,45 @@ html.light .markdown-body {
 
 .markdown-body li+li {
     margin-top: .25em;
+}
+
+.markdown-body li {
+    position: relative;
+}
+.markdown-body li:before {
+    position: absolute;
+    right: calc(100% + var(--base-size-8));
+}
+
+.markdown-body ul > li:before {
+    content: "●";
+}
+.markdown-body ol > li:nth-child(1):before {
+    content: "1.";
+}
+.markdown-body ol > li:nth-child(2):before {
+    content: "2.";
+}
+.markdown-body ol > li:nth-child(3):before {
+    content: "3.";
+}
+.markdown-body ol > li:nth-child(4):before {
+    content: "4.";
+}
+.markdown-body ol > li:nth-child(5):before {
+    content: "5.";
+}
+.markdown-body ol > li:nth-child(6):before {
+    content: "6.";
+}
+.markdown-body ol > li:nth-child(7):before {
+    content: "7.";
+}
+.markdown-body ol > li:nth-child(8):before {
+    content: "8.";
+}
+.markdown-body ol > li:nth-child(9):before {
+    content: "9.";
 }
 
 .markdown-body dl {
