improved code blocks in docs

--- a/src/asciidraw/src/docs/style.css
+++ b/src/asciidraw/src/docs/style.css
@@ -898,7 +898,7 @@ html.light .markdown-body {
     padding: var(--base-size-16);
     overflow: auto;
     font-size: 85%;
-    line-height: 1.45;
+    line-height: 1rem;
     color: var(--fgColor-default);
     background-color: var(--bgColor-muted);
     border-radius: 6px;
