--- a/src/asciidraw/src/assets/index.css
+++ b/src/asciidraw/src/assets/index.css
@@ -7,6 +7,13 @@
         --radius: 0.5rem;
     }
 
+    .light {
+        --shadow: 0 0% 0% / 0.25;
+    }
+    .dark {
+        --shadow: 0 0% 0% / 0.75;
+    }
+
     /* https://shadcncolors.com/ */
     :root, .light.theme-light {
         --background: 0 0% 100%;
