--- a/src/asciidraw/src/assets/index.css
+++ b/src/asciidraw/src/assets/index.css
@@ -357,6 +357,6 @@
     @apply border-border;
   }
   body {
-    @apply bg-background text-foreground transition-colors duration-300;
+    @apply bg-background text-foreground;
   }
 }
